--- a/BolsaDeValores/AndroidManifest.xml
+++ b/BolsaDeValores/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.bolsadevalores.activity.StockActivity"
+            android:name="com.example.bolsadevalores.activity.CurrencyActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
