--- a/BolsaDeValores/AndroidManifest.xml
+++ b/BolsaDeValores/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.bolsadevalores.activity.CurrencyActivity"
+            android:name="com.example.bolsadevalores.activity.StockActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,6 +40,12 @@
         <activity
             android:name="com.example.bolsadevalores.activity.DetailsActivity"
             android:label="@string/title_activity_details" >
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.bolsadevalores.activity.StockActivity"/>
+        </activity>
+        <activity
+            android:name="com.example.bolsadevalores.activity.CurrencyActivity"
+            android:label="@string/title_activity_currency" >
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.bolsadevalores.activity.StockActivity"/>
         </activity>
