Fazendo projeto funfar em outro lugar.

--- a/BolsaDeValores/project.properties
+++ b/BolsaDeValores/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../TinyRss/TinyRssLib
+android.library.reference.1=..\\TinyRss\\TinyRssLib
 android.library=false
-android.library.reference.2=../../../eclipse-android/sdk/extras/android/support/v7/appcompat
+android.library.reference.2=../../../../../Eclipse-bundle-x64/sdk/extras/android/support/v7/appcompat
