--- a/BolsaDeValores/AndroidManifest.xml
+++ b/BolsaDeValores/AndroidManifest.xml
@@ -32,7 +32,7 @@
                 android:value="com.example.bolsadevalores.activity.StockActivity"/>
         </activity>
         <activity
-            android:name="com.example.bolsadevalores.activity.SearchStockActivity"
+            android:name="com.example.bolsadevalores.activity.StockSearchActivity"
             android:label="@string/title_activity_search_stock" >
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.bolsadevalores.activity.StockActivity"/>
@@ -48,6 +48,12 @@
             android:label="@string/title_activity_currency" >
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.bolsadevalores.activity.StockActivity"/>
+        </activity>
+        <activity
+            android:name="com.example.bolsadevalores.activity.CurrencySearchActivity"
+            android:label="@string/title_activity_search_stock" >
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.bolsadevalores.activity.CurrencyActivity"/>
         </activity>
     </application>
 
